added product detail page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <h4>For Mobile</h4>
                 </div>
                 <div class="category__banner-img">
-                    <img src="./image/banner1.avif" alt="">
+                    <a href="/listing.html"><img src="./image/banner1.avif" alt=""></a>
                 </div>
             </div>
 
@@ -109,7 +109,7 @@
                     <h4>For TWS</h4>
                 </div>
                 <div class="category__banner-img">
-                    <img src="./image/banner2.avif" alt="">
+                    <a href="/listing.html"><img src="./image/banner2.avif" alt=""></a>
                 </div>
             </div>
 
@@ -122,7 +122,7 @@
                     <h4>For Watch</h4>
                 </div>
                 <div class="category__banner-img">
-                    <img src="./image/banner3.avif" alt="">
+                    <a href="/listing.html"><img src="./image/banner3.avif" alt=""></a>
                 </div>
             </div>
 
@@ -135,7 +135,7 @@
                     <h4>For Camera</h4>
                 </div>
                 <div class="category__banner-img">
-                    <img src="./image/banner4.avif" alt="">
+                    <a href="/listing.html"><img src="./image/banner4.avif" alt=""></a>
                 </div>
             </div>
 
@@ -158,7 +158,7 @@
                 <img src="./image/sale-banner1.avif" alt="">
                 <div class="sale-product__container1-overlay">
                     <p>Up To <span>40% OFF</span></p>
-                    <button>SHOP NOW</button>
+                    <button><a href="/listing.html">SHOP NOW</a></button>
                 </div>
             </div>
             <div class="sale-product__container2">
@@ -166,14 +166,14 @@
                     <img src="./image/sale-banner2.avif" alt="">
                     <div class="sale-product__sub-container1-overlay">
                         <p>Up To <span>40% OFF</span></p>
-                        <button>SHOP NOW</button>
+                        <button><a href="/listing.html">SHOP NOW</a></button>
                     </div>
                 </div>
                 <div class="sale-product__sub-container2">
                     <img src="./image/sale-banner3.avif" alt="">
                     <div class="sale-product__sub-container2-overlay">
                         <p>Up To <span>40% OFF</span></p>
-                        <button>SHOP NOW</button>
+                        <button><a href="/listing.html">SHOP NOW</a></button>
                     </div>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                 </div>
                 <div class="feature-product__card-details">
                     <h4 class="feature-product__card-title">
-                        Iphone 15 Pro Max (Titanium grey)
+                        <a href="/productDetail.html">Iphone 15 Pro Max (Titanium grey)</a>
                     </h4>
                     <div class="feature-product__card-price">
                         <p class="feature-product__card-price-selling">$500</p>
@@ -222,7 +222,7 @@
                 </div>
                 <div class="feature-product__card-details">
                     <h4 class="feature-product__card-title">
-                        Nikon Z50 Mirrorless Camera
+                        <a href="/productDetail.html">Nikon Z50 Mirrorless Camera</a>
                     </h4>
                     <div class="feature-product__card-price">
                         <p class="feature-product__card-price-selling">$500</p>
@@ -242,7 +242,7 @@
                 </div>
                 <div class="feature-product__card-details">
                     <h4 class="feature-product__card-title">
-                        Fire-Boltt Snapp Smart Watch
+                        <a href="/productDetail.html">Fire-Boltt Snapp Smart Watch</a>
                     </h4>
                     <div class="feature-product__card-price">
                         <p class="feature-product__card-price-selling">$500</p>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="feature-product__card-details">
                     <h4 class="feature-product__card-title">
-                        Mivi SuperPods Halo [Flagship Launch]
+                        <a href="/productDetail.html">Mivi SuperPods Halo [Flagship Launch]</a>
                     </h4>
                     <div class="feature-product__card-price">
                         <p class="feature-product__card-price-selling">$500</p>
@@ -282,7 +282,7 @@
                 </div>
                 <div class="feature-product__card-details">
                     <h4 class="feature-product__card-title">
-                        Lava Blaze X 5G - (Titanium Grey)
+                        <a href="/productDetail.html">Lava Blaze X 5G - (Titanium Grey)</a>
                     </h4>
                     <div class="feature-product__card-price">
                         <p class="feature-product__card-price-selling">$500</p>
@@ -302,7 +302,7 @@
                 </div>
                 <div class="feature-product__card-details">
                     <h4 class="feature-product__card-title">
-                        Prowatch VN with 2 Year Warranty
+                        <a href="/productDetail.html">Prowatch VN with 2 Year Warranty</a>
                     </h4>
                     <div class="feature-product__card-price">
                         <p class="feature-product__card-price-selling">$500</p>
