--- a/listing.html
+++ b/listing.html
@@ -339,11 +339,17 @@
                 <!-- CARD 1 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone1-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone1-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>POCO C65 (Pastel Blue 4GB RAM 128GB Storage)</h4>
+                            <h4>
+                                <a href="/productDetail.html">
+                                    POCO C65 (Pastel Blue 4GB RAM 128GB Storage)
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -382,11 +388,17 @@
                 <!-- CARD 2 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone2-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone2-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Realme NARZO N61 (Voyage Blue, 6GB RAM 128GB Storage)</h4>
+                            <h4>
+                                <a href="/productDetail.html">
+                                    Realme NARZO N61 (Voyage Blue, 6GB RAM 128GB Storage)
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -425,11 +437,17 @@
                 <!-- CARD 3 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone3-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone3-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>POCO C65 (Matte Black 4GB RAM 128GB Storage)</h4>
+                            <h4>
+                                <a href="/productDetail.html">
+                                    POCO C65 (Matte Black 4GB RAM 128GB Storage)
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -468,11 +486,17 @@
                 <!-- CARD 4 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone4-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone4-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Samsung Galaxy M14 4G (Sapphire Blue, 4GB 64GB)</h4>
+                            <h4>
+                                <a href="/productDetail.html">
+                                    Samsung Galaxy M14 4G (Sapphire Blue, 4GB 64GB)
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -511,11 +535,17 @@
                 <!-- CARD 5 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone5-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone5-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Redmi 13C (Starshine Green, 4GB RAM, 128GB Storage)</h4>
+                            <h4>
+                                <a href="/productDetail.html">
+                                    Redmi 13C (Starshine Green, 4GB RAM, 128GB Storage)
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -554,11 +584,17 @@
                 <!-- CARD 6 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone6-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone6-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Apple iPhone 15 (128 GB) - Black</h4>
+                            <h4>
+                                <a href="/productDetail.html">
+                                    Apple iPhone 15 (128 GB) - Black
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -597,11 +633,16 @@
                 <!-- CARD 7 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone7-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone7-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Apple iPhone 15 (128 GB) - Red</h4>
+                            <h4><a href="/productDetail.html">
+                                    POCO M6 5G (Orion Blue, 6GB RAM, 128GB Storage)
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -640,11 +681,17 @@
                 <!-- CARD 8 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone8-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone8-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Redmi 12 5G (Moonstone Silver, 4GB RAM, 128GB Storage)</h4>
+                            <h4>
+                                <a href="/productDetail.html">
+                                    Redmi A3X (Olive Green, 3GB RAM, 64GB Storage)
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -683,11 +730,13 @@
                 <!-- CARD 9 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone9-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone9-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Realme NARZO N53 (Feather Gold, 4GB RAM, 128GB Storage)</h4>
+                            <h4><a href="/productDetail.html">Redmi 12 5G Jade Black 8GB RAM 256GB ROM</a></h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -726,11 +775,16 @@
                 <!-- CARD 10 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone10-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone10-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Infinix Note 12 (Force Black, 6GB RAM, 128GB Storage)</h4>
+                            <h4>
+                                <a href="/productDetail.html">Apple iPhone 15 Pro (128 GB) - Natural Titanium
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -769,11 +823,17 @@
                 <!-- CARD 11 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone11-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone11-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Vivo Y20G (Obsidian Black, 6GB RAM, 128GB Storage)</h4>
+                            <h4>
+                                <a href="/productDetail.html">Redmi Note 13 Pro+ (Fusion Purple, 8GB RAM, 256GB
+                                    Storage)
+                                </a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
@@ -812,11 +872,15 @@
                 <!-- CARD 12 start -->
                 <div class="products__listing--card">
                     <div class="products__listing--card-img">
-                        <img src="./image/listing-phone12-card.webp" alt="">
+                        <a href="/productDetail.html">
+                            <img src="./image/listing-phone12-card.webp" alt="">
+                        </a>
                     </div>
                     <div class="products__listing--card-detail">
                         <div class="products__listing--card-title">
-                            <h4>Oppo A53s (Crystal Blue, 4GB RAM, 128GB Storage)</h4>
+                            <h4>
+                                <a href="/productDetail.html">Apple iPhone 14 Pro Max (256 GB) - Deep Purple</a>
+                            </h4>
                         </div>
                         <div class="products__listing--card-rating">
                             <p>
