fixed checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -87,27 +87,29 @@
                 </h3>
 
                 <div class="checkout__shipping-details-payment--form">
+                    <label for="">
+                        NAME ON CARD
+                        <input type="text" placeholder="Enter your name">
+                    </label>
+                    <label for="">
+                        CARD NUMBER
+                        <input type="text" placeholder="Enter your card number">
+                    </label>
                     <div>
-                        <p>NAME ON CARD</p>
-                        <input type="text">
-                    </div>
-                    <div>
-                        <p>CARD NUMBER</p>
-                        <input type="text">
-                    </div>
-                    <div>
-                        <p>VALIDITY</p>
-                        <input type="text">
-                    </div>
-                    <div>
-                        <p>CVV</p>
-                        <input type="text">
+                        <label for="">
+                            VALIDITY
+                            <input type="text" placeholder="M / Y">
+                        </label>
+                        <label for="">
+                            CVV
+                            <input type="text" placeholder="***">
+                        </label>
                     </div>
 
                 </div>
                 <div class="checkout__shipping-details-payment--cta">
-                    <button>PROCEED TO PAY</button>
-                    <button>EDIT CART</button>
+                    <button class="pay">PROCEED TO PAY</button>
+                    <button class="edit">EDIT CART</button>
                 </div>
             </div>
 
@@ -187,6 +189,93 @@
         </div>
 
     </div>
+
+    <!-- TRUST ELEMENT start -->
+
+    <div class="trust">
+        <div>
+            <img src="./image/trust-icon1.png" alt="">
+            <p>Premium Quality</p>
+        </div>
+        <div>
+            <img src="./image/trust-icon2.png" alt="">
+            <p>Free Shipping</p>
+        </div>
+        <div>
+            <img src="./image/trust-icon3.png" alt="">
+            <p>COD Avilable</p>
+        </div>
+        <div>
+            <img src="./image/trust-icon4.png" alt="">
+            <p>Easy Returns</p>
+        </div>
+
+    </div>
+
+    <!-- TRUST ELEMENT end -->
+
+    <!-- FOOTER start -->
+
+    <footer class="footer">
+        <ul class="footer-accordion">
+            <li>
+                <input type="checkbox" name="footer-accordion" id="who" checked>
+                <label for="who">Who We Are</label>
+                <div class="content">
+                    <p>About Us</p>
+                    <p>Weaves of Kindness</p>
+                    <p>Contact Us</p>
+                    <p>FAQ</p>
+                    <p>Blog</p>
+                    <p>Sitemap</p>
+                </div>
+            </li>
+
+            <li>
+                <input type="checkbox" name="footer-accordion" id="policy">
+                <label for="policy">Policies</label>
+                <div class="content">
+                    <p>Terms & Conditions</p>
+                    <p>Billing Terms & Conditions</p>
+                    <p>Refund Policy</p>
+                    <p>Shipping Policy</p>
+                    <p>Cancellation & Return Policy</p>
+                    <p>Privacy Policy</p>
+                </div>
+            </li>
+
+            <li>
+                <input type="checkbox" name="footer-accordion" id="quick-links">
+                <label for="quick-links">Quick Links</label>
+                <div class="content">
+                    <p>Payment & Security</p>
+                    <p>Order Status</p>
+                    <p>My Account</p>
+                    <p>Tech Guide</p>
+                    <p>Wholesale</p>
+                </div>
+            </li>
+
+            <li>
+                <input type="checkbox" name="footer-accordion" id="follow">
+                <label for="follow">Follow Us</label>
+                <div class="content">
+                    <p> <i class="fa-brands fa-instagram"></i></p>
+                    <p> <i class="fa-brands fa-facebook"></i></p>
+                    <p> <i class="fa-brands fa-linkedin"></i></p>
+                    <p> <i class="fa-brands fa-x-twitter"></i></p>
+                    <p><i class="fa-brands fa-youtube"></i></p>
+                </div>
+            </li>
+        </ul>
+        <div class="footer__copyright">
+            <p>Copyright © 2024 Himanshu Private Limited.
+                All rights reserved.</p>
+        </div>
+    </footer>
+
+    <!-- FOOTER end -->
+
 </body>
 
 </html>
