added related products

--- a/checkout.html
+++ b/checkout.html
@@ -109,7 +109,13 @@
                 </div>
                 <div class="checkout__shipping-details-payment--cta">
                     <button class="pay">PROCEED TO PAY</button>
-                    <button class="edit">EDIT CART</button>
+                    <a href="/cart.html"><button class="edit">EDIT CART</button></a>
+                </div>
+                <div class="checkout__shipping-details-payment--footer">
+                    <img src="./image/pay1.jpg" alt="">
+                    <img src="./image/pay2.jpg" alt="">
+                    <img src="./image/pay3.jpg" alt="">
+                    <img src="./image/pay4.jpg" alt="">
                 </div>
             </div>
 
