--- a/productDetail.html
+++ b/productDetail.html
@@ -125,7 +125,7 @@
 
             <div class=" product-detail__description-cta">
                 <button class="add-to-cart">Add to Cart</button>
-                <button class="buy-now">Buy Now</button>
+                <a href="/checkout.html"><button class="buy-now">Buy Now</button></a>
             </div>
 
             <div class="product-detail__description-trust-element">
@@ -322,6 +322,118 @@
     </div>
 
     <!-- PRODUCT DETAILED DESCRIPTION end  -->
+
+    <!-- REALTED PRODUCTS start   -->
+
+    <div class="related-products">
+        <h3 class="related-products__title">
+            RELATED PRODUCTS
+        </h3>
+        <div class="related-products__container">
+            <div class="related-products__cards">
+
+                <!-- CARD 1 start  -->
+                <div class="related-products__card">
+                    <div class="related-products__card-img">
+                        <img src="./image/related-camera1.webp" alt="">
+                    </div>
+                    <h3 class="related-products__card-title">
+                        Sony Alpha ILCE Digital SLR Camera
+                    </h3>
+                    <div class="related-products__card-price">
+                        <p class="original">$125</p>
+                        <p class="selling">$99</p>
+                        <p class="off">14% OFF</p>
+                    </div>
+
+                </div>
+                <!-- CARD 1 end  -->
+                <!-- CARD 2 start  -->
+                <div class="related-products__card">
+                    <div class="related-products__card-img">
+                        <img src="./image/related-tws1.jpg" alt="">
+                    </div>
+                    <h3 class="related-products__card-title">
+                        Realme Buds T110 with Ai Enc for Calls
+                    </h3>
+                    <div class="related-products__card-price">
+                        <p class="original">$125</p>
+                        <p class="selling">$99</p>
+                        <p class="off">14% OFF</p>
+                    </div>
+
+                </div>
+                <!-- CARD 2 end  -->
+                <!-- CARD 3 start  -->
+                <div class="related-products__card">
+                    <div class="related-products__card-img">
+                        <img src="./image/related-watch1.jpg" alt="">
+                    </div>
+                    <h3 class="related-products__card-title">
+                        Pebble Royale Legend 1.43" AMOLED Display
+                    </h3>
+                    <div class="related-products__card-price">
+                        <p class="original">$125</p>
+                        <p class="selling">$99</p>
+                        <p class="off">14% OFF</p>
+                    </div>
+
+                </div>
+                <!-- CARD 3 end  -->
+                <!-- CARD 4 start  -->
+                <div class="related-products__card">
+                    <div class="related-products__card-img">
+                        <img src="./image/related-watch2.jpg" alt="">
+                    </div>
+                    <h3 class="related-products__card-title">
+                        Samsung Galaxy Watch 7 (44mm, Green, BT)
+                    </h3>
+                    <div class="related-products__card-price">
+                        <p class="original">$125</p>
+                        <p class="selling">$99</p>
+                        <p class="off">14% OFF</p>
+                    </div>
+
+                </div>
+                <!-- CARD 4 end  -->
+                <!-- CARD 5 start  -->
+                <div class="related-products__card">
+                    <div class="related-products__card-img">
+                        <img src="./image/related-watch3.jpg" alt="">
+                    </div>
+                    <h3 class="related-products__card-title">
+                        Samsung Galaxy Watch Ultra (47mm, LTE, Gray)
+                    </h3>
+                    <div class="related-products__card-price">
+                        <p class="original">$125</p>
+                        <p class="selling">$99</p>
+                        <p class="off">14% OFF</p>
+                    </div>
+
+                </div>
+                <!-- CARD 5 end  -->
+                <!-- CARD 6 start  -->
+                <div class="related-products__card">
+                    <div class="related-products__card-img">
+                        <img src="./image/related-watch4.jpg" alt="">
+                    </div>
+                    <h3 class="related-products__card-title">
+                        Samsung Galaxy Watch4 LTE (4.0 cm, Black)
+                    </h3>
+                    <div class="related-products__card-price">
+                        <p class="original">$125</p>
+                        <p class="selling">$99</p>
+                        <p class="off">14% OFF</p>
+                    </div>
+
+                </div>
+                <!-- CARD 6 end  -->
+
+            </div>
+        </div>
+    </div>
+
+    <!-- REALTED PRODUCTS end   -->
 
     <!-- TRUST ELEMENT start -->
 
